--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,13 @@
 <head>
     <!-- Básico -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-
-    <!-- SEO Primario -->
-    <title>ARCANA CORP — Empresa Tecnológica de Producto</title>
-    <meta name="description" content="ARCANA CORP es una empresa tecnológica que crea productos digitales, plataformas e infraestructura de software escalable. Construimos tecnología como producto." />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://arcana.com/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Branding -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- Open Graph -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="ARCANA CORP — Empresa Tecnológica" />
-    <meta property="og:description" content="Creamos productos digitales, plataformas e infraestructura tecnológica escalable." />
-    <meta property="og:url" content="https://arcana.com/" />
-    <meta property="og:image" content="https://arcana.com/og-image.png" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ARCANA CORP — Empresa Tecnológica" />
-    <meta name="twitter:description" content="Construimos tecnología como producto." />
-    <meta name="twitter:image" content="https://arcana.com/og-image.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
