--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
 
+    <meta name="google-site-verification" content="2ghp54aYmqqEmIQBKs0vlVCHLLrrXhQ-g3jArPAg4Lg" />
+
 </head>
 <body id="root">
     <noscript>ARCANA CORP requiere JavaScript para funcionar correctamente.</noscript>
